TEST_PROGRAMS/VALID/remi_bernard/calc.min
# This sample program implements a basic calculator
var a: float;
var b: float;
var i: int;

i = -1;
while i do
	if i + 1 then
	if i - 1 then
	if i - 2 then
	if i - 3 then
	if i - 4 then
		print "Unknown command";
		print i;

	else # i == 4
		print a / b;
	endif

	else # i == 3
		print a * b;
	endif
	
	else # i == 2
		print a - b;
	endif

	else # i == 1
		print a + b;
	endif

	else # i == -1
		print "Sample calculator 0.0.1";
	endif

	print "1 Add";
	print "2 Substract";
	print "3 Multiply";
	print "4 Divide";
	print "0 Exit";
	print "Enter a command";
	read i;

	if i then
		print "Enter the first operand";
		read a;

		print "Enter the second operand";
		read b;
	endif
done

