TEST_PROGRAMS/INVALID/Yash_Gupta/I3.min
var z :int;
var imag1234vorasaurus:float;
var yahoo432:int;
while yahoo543 do petrodactyl = 1234 - 15/13.4+3.8; done
z = 5.8;
if stegosaurus then l1234 = 1234; else z=9.3; endif endif



